# Sandbox

./: .gitignore  CMakeLists.txt  README.md  Sandbox.sln
Sandbox/: Sandbox.filters  Sandbox.vcxproj  Sandbox.vcxproj.filters  bo_utils.cpp  bo_utils.h  core.h  imgui.ini  input.cpp  input.h  inputevents.cpp  inputevents.h  main.cpp  primitives.cpp  shaders.cpp  shaders.h  texture.h  vertex_buffer.cpp  vertex_buffer.h  window.cpp  window.h
Sandbox/src/: camera.cpp  camera.h  index_buffer.cpp  index_buffer.h  input.cpp  input.h  main.cpp  memory_allocator.cpp  mesh.cpp  mesh.h  primitives.cpp  primitives.h  shaders.cpp  shaders.h  texture.cpp  texture.h  types.cpp  types.h  utils.cpp  utils.h  vertex_buffer.cpp  vertex_buffer.h  window.h
Sandbox/src/shaders/: color.vert  light.frag  lit.frag  orange.frag  tex.frag  yellow.frag
code/: CMakeLists.txt  main.cpp
code/application/: Application.cpp  Application.h  CMakeLists.txt
code/game/: CMakeLists.txt  SbGame.cpp  SbGame.h
code/src/: CMakeLists.txt
code/src/Core/: Base.h  Collections.cpp  Collections.h  Config.cpp  Config.h  Debug.cpp  Debug.h  Singleton.h  Types.cpp  Types.h  Utils.cpp  Utils.h
code/src/ECS/: ComponentManager.cpp  ComponentManager.h  Components.h  System.h
code/src/Engine/: Engine.cpp  Engine.h  IEngine.h
code/src/Game/: IGame.h
code/src/ImGui/: ImGuiSbContext.cpp  ImGuiSbContext.h
code/src/Input/: Input.cpp  Input.h
code/src/Math/: Vectors.h
code/src/Memory/: Allocator.cpp  Allocator.h
code/src/Rendering/: Assimp.cpp  Assimp.h  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Primitives.cpp  Primitives.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h  Window.h
code/src/Resources/: ResourceManager.cpp  ResourceManager.h  Resources.h  ShaderManager.cpp  ShaderManager.h  TextureManager.h
code/src/Scene/: Scene.cpp  Scene.h  SceneManager.h
resources/model/: cube.mtl  source.txt
resources/shaders/: color.frag  cubemap.frag  cubemap.vert  default.vert  gbuffer.frag  light.frag  lit.frag  material.vert  screen.frag  screen.vert  tex.frag  vertex.vert  ztest.frag
scripts/: generate_resource_manifest.py  resource-serializer.py
src/: CMakeLists.txt  application.cpp  camera.cpp  camera.h  input.cpp  input.h  logger.cpp  logger.h  main.cpp  math.h  memory_allocator.cpp  memory_allocator.h  mesh.cpp  mesh.h  primitives.cpp  primitives.h  shaders.cpp  shaders.h  texture.cpp  texture.h  types.cpp  types.h  utils.cpp  utils.h  vertex_buffer.cpp  vertex_buffer.h  window.cpp  window.h
src/Core/: Base.h  Debug.cpp  Debug.h  Singleton.h  Types.cpp  Types.h  Utils.cpp  Utils.h
src/ImGui/: ImGuiManager.cpp  ImGuiManager.h
src/Input/: Input.cpp  Input.h
src/Math/: Vectors.h
src/Memory/: Allocator.cpp  Allocator.h
src/Renderer/: Assimp.cpp  Assimp.h  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Primitives.cpp  Primitives.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h
src/Resources/: ResourceManager.cpp  ResourceManager.h  Resources.h  ShaderManager.cpp  ShaderManager.h  TextureManager.h
